# tblis

./: .gitattributes  .gitignore  .travis.yml  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  bli_config.h  build  config.h  config.h.in  configure  configure.ac  setup.py  test.cxx  test.x
include/: tensor.h  tensor.hpp
include/blis++/: blis++.hpp  matrix.hpp  memory.hpp  partition.hpp  scalar.hpp  scatter_matrix.hpp  vector.hpp
include/core/: tensor_class.hpp  tensor_iface.hpp  tensor_partitioner.hpp  tensor_slicer.hpp  tensor_templates.hpp
include/impl/: tensor_impl.hpp  tensor_impl_blas.hpp  tensor_impl_blis.hpp  tensor_impl_reference.hpp
include/tblis/: gemm.hpp  normfm.hpp  pack.hpp  partition.hpp  tblis.hpp  ukernel.hpp
include/util/: blas.h  blas.hpp  blis.hpp  fortran.hpp  iterator.hpp  stack_allocator.hpp  tensor_check.hpp  util.hpp
m4/: aq_check_func_with_path.m4  aq_check_header_with_path.m4  aq_check_lib_with_path.m4  aq_search_libs_with_path.m4  aq_with_package.m4  as-gcc-inline-assembly.m4  ax_blas.m4  ax_check_sign.m4  ax_cxx_compile_stdcxx_11.m4  ax_prefix_config_h.m4  tblis_config_subdir.m4
src/: bench.cxx  blis.h  tblis.cxx  tblis.h  tblis.hpp  tblis_aligned_allocator.hpp  tblis_barrier.hpp  tblis_basic_types.hpp  tblis_batched_tensor.hpp  tblis_batched_tensor_contract.hpp  tblis_block_scatter_matrix.hpp  tblis_config.hpp  tblis_config_import.hpp  tblis_configs.hpp  tblis_import_config.hpp  tblis_import_configs.hpp.in  tblis_instantiate_for_types.hpp.in  tblis_matrify.cxx  tblis_matrify.hpp  tblis_memory_pool.hpp  tblis_mutex.cxx  tblis_mutex.hpp  tblis_random.cxx  tblis_scatter_matrix.hpp  tblis_stack_allocator.hpp  tblis_tensor.hpp  tblis_tensor_matrix.hpp  tblis_thread.hpp  tblis_time.hpp  tblis_util.hpp  tblis_yield.hpp  tensor.h  tensor_templates.hpp  test.cxx
src/1m/: add.cxx  add.h  dot.cxx  dot.h  reduce.cxx  reduce.h  scale.cxx  scale.h  set.cxx  set.h  tblis_matrix_reduce.hpp  tblis_normfm.cxx  tblis_normfm.hpp
src/1t/: add.cxx  add.h  dot.cxx  dot.h  reduce.cxx  reduce.h  scale.cxx  scale.h  set.cxx  set.h  tblis_dot_ref.cxx  tblis_reduce.cxx  tblis_reduce.hpp  tblis_reduce_ref.cxx  tblis_replicate.cxx  tblis_replicate_ref.cxx  tblis_scale.cxx  tblis_scale.hpp  tblis_scale_ref.cxx  tblis_size.hpp  tblis_sum.cxx  tblis_sum.hpp  tblis_sum_ref.cxx  tblis_trace.hpp  tblis_transpose.cxx  tblis_transpose.hpp  tblis_transpose_ref.cxx
src/1v/: add.cxx  add.h  axpby.h  axpbyv.cxx  dot.cxx  dot.h  reduce.cxx  reduce.h  scale.cxx  scale.h  set.cxx  set.h  tblis_addv.cxx  tblis_addv.hpp  tblis_asumv.cxx  tblis_asumv.hpp  tblis_axpbyv.cxx  tblis_axpbyv.hpp  tblis_axpyv.cxx  tblis_axpyv.hpp  tblis_copyv.cxx  tblis_copyv.hpp  tblis_dotv.cxx  tblis_dotv.hpp  tblis_normfv.cxx  tblis_normfv.hpp  tblis_scal2v.cxx  tblis_scal2v.hpp  tblis_scalv.cxx  tblis_scalv.hpp  tblis_setv.cxx  tblis_setv.hpp  tblis_sumv.cxx  tblis_sumv.hpp  tblis_xpbyv.cxx  tblis_xpbyv.hpp  tblis_zerov.cxx  tblis_zerov.hpp
src/2t/: tblis_dot.cxx  tblis_dot.hpp  tblis_dot_ref.cxx  tblis_replicate.cxx  tblis_replicate.hpp  tblis_replicate_ref.cxx  tblis_sum.cxx  tblis_sum.hpp  tblis_sum_ref.cxx  tblis_trace.cxx  tblis_trace.hpp  tblis_trace_ref.cxx  tblis_transpose.cxx  tblis_transpose.hpp  tblis_transpose_ref.cxx
src/3/: tblis_gemm.cxx  tblis_gemm.hpp  tblis_gemm_ukr.cxx  tblis_gemm_ukr.hpp  tblis_packm.hpp  tblis_partm.hpp
src/3m/: gemm_ukr.hpp  mult.cxx  mult.h  packm.hpp  partm.hpp  tblis_gemm.cxx  tblis_gemm.hpp  tblis_gemm_template.hpp  tblis_gemm_ukr.hpp  tblis_packm.cxx  tblis_packm.hpp  tblis_partm.hpp
src/3t/: mult.cxx  mult.h  tblis_contract.cxx  tblis_contract.hpp  tblis_contract_blas.cxx  tblis_contract_blis.cxx  tblis_contract_ref.cxx  tblis_mult.cxx  tblis_mult.hpp  tblis_mult_blas.cxx  tblis_mult_ref.cxx  tblis_outer_prod.cxx  tblis_outer_prod.hpp  tblis_outer_prod_blas.cxx  tblis_outer_prod_ref.cxx  tblis_weight.cxx  tblis_weight.hpp  tblis_weight_blas.cxx  tblis_weight_ref.cxx
src/blis-like/: bli_config.hpp  tblis_block_scatter_matrix.hpp  tblis_config.hpp  tblis_config_import.hpp  tblis_constants.hpp  tblis_scatter_matrix.hpp  tblis_tensor_matrix.hpp
src/config/: tblis_reference_config.hpp
src/configs/: ambi.hpp  config_builder.hpp  configs.cxx  configs.hpp  foreach_config.h  foreach_config_and_type.h  foreach_type.h  foreach_type.h.in  include_configs.hpp  instantiate_default_kernels.hpp  tblis_configs.hpp  tblis_instantiate_for_configs.hpp  tblis_instantiate_for_configs.hpp.in  tblis_instantiate_for_types.hpp  tblis_reference_config.hpp
src/core/: tblis_memory_pool.hpp  tblis_mutex.hpp  tblis_tensor.hpp  tblis_thread.hpp  tensor_c99.cxx  tensor_class.hpp  tensor_iface.hpp  tensor_iterator.hpp  tensor_partitioner.hpp  tensor_slicer.hpp  tensor_templates.hpp
src/impl/: tensor_impl.cxx  tensor_impl.hpp  tensor_impl_blas.hpp  tensor_impl_blis.hpp  tensor_impl_reference.hpp
src/matrix/: abstract_matrix.hpp  block_scatter_matrix.hpp  diag_scaled_matrix.hpp  dpd_tensor_matrix.hpp  indexed_dpd_tensor_matrix.hpp  indexed_patch_block_scatter_matrix.hpp  normal_matrix.hpp  patch_block_scatter_matrix.hpp  scatter_matrix.hpp  scatter_tensor_matrix.hpp  tblis_block_scatter_matrix.hpp  tblis_scatter_matrix.hpp  tblis_tensor_matrix.hpp  tensor_matrix.hpp
src/memory/: aligned_allocator.hpp  alignment.hpp  memory_pool.hpp  stack_allocator.hpp  tblis_memory_pool.hpp
src/nodes/: gemm.hpp  gemm_ker.hpp  gemm_mkr.hpp  gemm_ukr.hpp  matrify.hpp  packm.hpp  partm.hpp
src/pytblis/: main.cpp
src/python/: as_einsum.cxx  tblis_einsum.py
src/tensor/: batched_tensor.hpp  batched_tensor_contract.hpp  dpd_tensor.hpp  dpd_tensor_contract.hpp  tblis_batched_tensor.hpp  tblis_batched_tensor_contract.hpp  tblis_diagonal.hpp  tblis_fold.hpp  tblis_matricize.hpp  tblis_matrify.cxx  tblis_matrify.hpp  tblis_partition.hpp  tblis_tensor_detail.hpp
src/util/: assert.h  (+26 more)
tblis/: blis.h  tblis.h
test/: batched_bench.cxx  bench.cxx  dpd_bench.cxx  random.cxx  random.hpp  skx_bench.cxx  test.cxx  test.hpp  test_add.py  test_install.cxx  test_tblis_einsum.py
(+595 files in other folders)
